# ai-sysadmin-supreme

./: README.md  package.json
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/system/: mod.rs
