[package]
name = "lous-garuda-ai-sysadmin-control-center"
version = "1.0.0"
description = "Lou's Garuda AI SysAdmin Control Center - Ultimate system administration suite with AI intelligence"
authors = ["Lou <wlfogle@github.com>"]
license = "MIT"
repository = "https://github.com/wlfogle/ai-sysadmin-supreme"
edition = "2021"
rust-version = "1.75.0"
keywords = ["ai", "sysadmin", "garuda", "linux", "automation"]
categories = ["system-administration", "development-tools"]

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "1.0", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and Scheduling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# System Information and Control
sysinfo = "0.29"
procfs = "0.15"
nix = { version = "0.27", features = ["process", "signal", "fs"] }

# File System Operations
notify = "5.0"
walkdir = "2.0"
fs_extra = "1.0"

# Database for AI Learning
rusqlite = { version = "0.29", features = ["bundled"] }
diesel = { version = "2.0", features = ["sqlite", "chrono"] }

# Neural Network for AI (embedded)
candle-core = "0.3"
candle-nn = "0.3"

# Hardware Control
hidapi = "2.0"

# Network Operations
netstat2 = "0.9"
reqwest = { version = "0.11", features = ["json"] }

# Compression and Archives
flate2 = "1.0"
tar = "0.4"

# Configuration
config = "0.13"
toml = "0.8"

# Regular Expressions
regex = "1.0"

# Math and Statistics
nalgebra = "0.32"
statrs = "0.16"

# Crypto (for secure storage)
sha2 = "0.10"
aes-gcm = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "ai-sysadmin-supreme"
path = "src/main.rs"
